--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@refinedev/cli": "^2.16.44",
     "@refinedev/core": "^4.57.7",
+    "@refinedev/react-router": "^1.0.1",
+    "@refinedev/react-router-v6": "^4.6.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router": "^7.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -26,6 +29,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^5.4.2",
-    "vite": "^5.1.6"
+    "vite": "^6.2.4"
   }
 }
