--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "start": "refine start"
   },
   "dependencies": {
+    "@refinedev/antd": "^5.45.3",
     "@refinedev/cli": "^2.16.44",
     "@refinedev/core": "^4.57.7",
     "@refinedev/react-router": "^1.0.1",
     "@refinedev/react-router-v6": "^4.6.2",
+    "antd": "^5.24.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^7.4.1"
