--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@refinedev/antd": "^5.45.3",
     "@refinedev/cli": "^2.16.44",
     "@refinedev/core": "^4.57.7",
+    "@refinedev/devtools": "^1.2.14",
+    "@refinedev/inferencer": "^5.0.3",
     "@refinedev/react-router": "^1.0.1",
     "@refinedev/react-router-v6": "^4.6.2",
     "antd": "^5.24.6",
